// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Spacing Component correctly 1`] = `
<div
  className="sc-bwzfXH gzFMrd"
  scale={undefined}
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 2`] = `
<div
  className="sc-bwzfXH kVQPAa"
  scale="xl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 3`] = `
<div
  className="sc-bwzfXH foOAJO"
  scale={undefined}
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 4`] = `
<div
  className="sc-bwzfXH jOtzCy"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 5`] = `
<div
  className="sc-bwzfXH eqMoro"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 6`] = `
<div
  className="sc-bwzfXH hzRInK"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 7`] = `
<div
  className="sc-bwzfXH hthCeq"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 8`] = `
<div
  className="sc-bwzfXH gDsRzm"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 9`] = `
<div
  className="sc-bwzfXH ctxsvv"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 10`] = `
<div
  className="sc-bwzfXH iniLjb"
  scale="xxl"
>
  Spacing
</div>
`;
